<resources>
    <string name="app_name">CrediHugo</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="header_credits_empty">Aqui se mostratran tus creditos.</string>
    <string name="header_credits_cantidad">$125,532.00</string>
    <string name="header_credits_total_string">Total de tus Prestamos</string>
    <string name="title_activity_credit_form">CreditForm</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <!--formulario nueva cotizacion-->
    <string name="nombre_credito">¿Para que es el prestamo?</string>
    <string name="monto_credito">Monto</string>
    <string name="interes_anual">Interés anual(%)</string>
    <string name="numero_pagos">No. de pagos</string>
    <string name="seleccion_semanal">Semanal</string>
    <string name="seleccion_quincenal">Quincenal</string>
    <string name="seleccion_mensual">Mensual</string>
    <string name="fecha_de_pago">Fecha de Pago:</string>

    <string name="nuevo_credito">Nuevo credito</string>
    <string name="title_activity_new_creditt">NewCredittActivity</string>
    <string name="dummy_button">Dummy Button</string>
    <string name="dummy_content">DUMMY\nCONTENT</string>
    <string name="fecha_pago">Fecha de pago:</string>
    <string name="boton_calcular">CALCULAR</string>


    <!-- detalle de cotizacion-->
    <string name="detalle_monto_total">$ %s</string>
    <string name="detalle_monto_total_footer">Total Para %s</string>
    <string name="detalle_monto_interes">%s</string>
    <string name="detalle_monto_interes_footer">Interes</string>
    <string name="detalle_monto_solicitado">$ %s</string>
    <string name="detalle_monto_solicitado_footer">Total Solicitado</string>
    <string name="detalle_monto_interes_total">$ %s</string>
    <string name="detalle_monto_interes_total_footer">Interes a Pagar</string>
    <string name="detalle_pagos">%s pagos</string>



    <string name="tipo_pago_detalle">Tipo de pago: </string>
    <string name="numero_pagos_detalle">No. de pagos: %s</string>
    <string name="fecha_de_pagos_detalle">Fecha de pago: %s</string>
    <string name="dashboard">DASHBOARD</string>
    <string name="alta_prestamo">CALCULAR PRESTAMO</string>
    <string name="campo_invalido">Campo Invalido</string>
    <string name="detalle_prestamo_toolbar">VISTA PREVIA</string>
    <string name="interes_detail">Interes</string>

    <string-array name="number_of_payments_array">
        <item>No. de Pagos</item>
        <item>6</item>
        <item>9</item>
        <item>12</item>
        <item>18</item>
        <item>24</item>
        <item>48</item>
        <item>60</item>
        <item>120</item>
    </string-array>
</resources>
