<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="creditos.com.creditohugo.Views.NewCreditActivity">

    <android.support.v7.widget.Toolbar
        android:id="@+id/toolbar_new_credit"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="?attr/colorPrimary"
        android:elevation="4dp"/>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp"
        android:layout_marginEnd="20dp"
        android:layout_marginStart="5dp"
        android:layout_marginTop="20dp"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/text_view_credit_name"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="5dp"
            android:layout_weight="1"
            android:text="@string/nombre_credito"
            android:textAlignment="textEnd"
            android:textSize="14sp"/>

        <EditText
            android:id="@+id/edit_text_credit_name"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="2"
            android:ems="20"
            android:inputType="textPersonName"
            android:textSize="14sp"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp"
        android:layout_marginEnd="20dp"
        android:layout_marginStart="5dp"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/text_view_amount"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="5dp"
            android:layout_weight="1"
            android:text="@string/monto_credito"
            android:textAlignment="textEnd"
            android:textSize="14sp"/>

        <EditText
            android:id="@+id/edit_text_amount"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="2"
            android:ems="20"
            android:inputType="numberDecimal"
            android:textSize="14sp"
            android:textStyle="bold"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp"
        android:layout_marginEnd="20dp"
        android:layout_marginStart="5dp"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/text_view_annual_interest"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="5dp"
            android:layout_weight="1"
            android:text="@string/interes_anual"
            android:textAlignment="textEnd"
            android:textSize="14sp"
            />

        <EditText
            android:id="@+id/edit_text_annual_interest"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="2"
            android:ems="20"
            android:inputType="numberDecimal"
            android:textSize="14sp"
            android:textStyle="bold"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp"
        android:layout_marginEnd="20dp"
        android:layout_marginStart="5dp"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/text_view_number_of_payments"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="5dp"
            android:layout_weight="1"
            android:text="@string/numero_pagos"
            android:textAlignment="textEnd"
            android:textSize="14sp"/>

        <EditText
            android:id="@+id/edit_text_number_of_payments"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="2"
            android:ems="20"
            android:inputType="number"
            android:textSize="14sp"
            android:textStyle="bold"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp"
        android:layout_marginEnd="20dp"
        android:layout_marginStart="5dp"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/text_view_payment"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="5dp"
            android:layout_weight="1"
            android:text="@string/tipo_pago"
            android:textAlignment="textEnd"
            android:textSize="14sp"/>

        <RadioGroup
            android:id="@+id/tipo_pago"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="2"
            android:orientation="vertical">

            <RadioButton
                android:id="@+id/radio_button_mensual"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/seleccion_mensual"
                android:textSize="14sp"/>

            <RadioButton
                android:id="@+id/radio_button_quincenal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/seleccion_quincenal"
                android:textSize="14sp"/>
        </RadioGroup>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp"
        android:layout_marginEnd="20dp"
        android:layout_marginStart="5dp"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/text_view_date_of_payments"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="5dp"
            android:layout_weight="1"
            android:text="@string/fecha_pago"
            android:textAlignment="textEnd"
            android:textSize="14sp"/>

        <EditText
            android:id="@+id/edit_text_date_of_payments"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="2"
            android:clickable="true"
            android:editable="false"
            android:ems="20"
            android:focusable="false"
            android:inputType="date"
            android:textSize="14sp"
            android:textStyle="bold"/>
    </LinearLayout>
    
    <Button
        android:id="@+id/btn_guardar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="20dp"
        android:text="@string/boton_guardar"/>
</LinearLayout>
